<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

<include layout="@layout/top_title_style"></include>
    <LinearLayout android:id="@+id/layout_content"
        android:layout_below="@+id/top_menu"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<View
			android:layout_width="match_parent"
			android:layout_height="6dp"
			android:background="@color/btn_text"/>
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="55dp">
			<TextView
				android:id="@+id/edit_cardID"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_toRightOf="@+id/campus_card_ID"
				android:textColor="@color/txt_two"
				android:gravity="center_vertical"
				android:textSize="16sp"
				android:paddingLeft="12dp"
				android:text="099"
				/>
			<TextView
				android:id="@+id/campus_card_ID"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_vertical"
				android:paddingLeft="15dip"
				android:textSize="16sp"
				android:textColor="@color/label_light"
				android:text="@string/rechage_cardID"
				/>

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_alignParentBottom="true"
				android:layout_marginLeft="15dp"
				android:layout_marginRight="17dp"
				android:background="@color/home_campus_card_line"/>
		</RelativeLayout>
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="55dp">
			<TextView
				android:id="@+id/edit_user_name"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_toRightOf="@+id/campus_card_name"
				android:textColor="@color/txt_two"
				android:gravity="center_vertical"
				android:textSize="16sp"
				android:paddingLeft="12dp"
				android:text="099"
				/>
			<TextView
				android:id="@+id/campus_card_name"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_vertical"
				android:paddingLeft="15dip"
				android:textSize="16sp"
				android:textColor="@color/label_light"
				android:text="@string/rechage_user_name"
				/>

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_alignParentBottom="true"
				android:layout_marginLeft="15dp"
				android:layout_marginRight="17dp"
				android:background="@color/home_campus_card_line"/>
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="55dp">
			<TextView
				android:id="@+id/edit_user_balance"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_toRightOf="@+id/campus_card_monney"
				android:textColor="@color/monney"
				android:gravity="center_vertical"
				android:textSize="16sp"
				android:paddingLeft="12dp"
				android:text="0.00"
				/>
			<TextView
				android:id="@+id/campus_card_monney"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_vertical"
				android:paddingLeft="15dip"
				android:textSize="16sp"
				android:textColor="@color/label_light"
				android:text="@string/rechage_user_balance"
				/>

			<TextView
				android:id="@+id/rechange_monney_none"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_toRightOf="@+id/campus_card_monney_none"
				android:textColor="@color/monney"
				android:gravity="center_vertical"
				android:textSize="16sp"
				android:paddingLeft="12dp"
				android:text="0.00"
				/>
			<TextView
				android:layout_toRightOf="@+id/rechange_none"
				android:id="@+id/campus_card_monney_none"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_vertical"
				android:paddingLeft="15dp"
				android:layout_marginLeft="15dp"
				android:textSize="16sp"
				android:layout_centerInParent="true"
				android:textColor="@color/label_light"
				android:text="@string/rechage_money_value_none"
				/>
			<TextView
				android:id="@+id/rechange_none"
				android:layout_width="32dp"
				android:layout_height="match_parent"
				android:gravity="center_vertical"
				android:paddingLeft="15dp"
				android:layout_marginLeft="15dp"
				android:textSize="16sp"
				android:layout_centerInParent="true"
				android:textColor="@color/label_light"
				/>

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_alignParentBottom="true"
				android:layout_marginLeft="15dp"
				android:layout_marginRight="17dp"
				android:background="@color/home_campus_card_line"/>
		</RelativeLayout>



		<LinearLayout
			android:layout_width="match_parent"
			android:background="@color/btn_text"
			android:layout_height="40dp">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center_vertical"
				android:textColor="@color/label_light"
				android:textSize="15sp"
				android:paddingLeft="15dp"
				android:text="@string/rechang_monney_value_hint"/>
		</LinearLayout>
		<GridView
			android:layout_margin="15dp"
			android:id="@+id/gridview_rechange"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:overScrollMode="never"
			android:listSelector="@android:color/transparent"
			android:numColumns="3"
			android:horizontalSpacing="4dp"
			android:verticalSpacing="10dp"
			/>

		<View
			android:layout_width="match_parent"
			android:background="@color/btn_text"
			android:layout_height="6dp">

		</View>
	</LinearLayout>
    
    <Button
         android:id="@+id/button_bind_next"
         android:layout_below="@+id/layout_content"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_marginTop="50dip"
         android:layout_marginBottom="7dip"
         android:layout_marginLeft="18dip"
         android:layout_marginRight="18dip"
         android:background="@drawable/btn_yuyue"
         android:text="@string/submit_rechage"
         android:textColor="@color/btn_text"
         android:textSize="18sp" 
         />

</RelativeLayout>